--- a/Bangledesh Agriculture Analysis/agricultureanalysis.ipynb
+++ b/Bangledesh Agriculture Analysis/agricultureanalysis.ipynb
@@ -168,7 +168,7 @@
     }
    ],
    "source": [
-    "# Heatmap: Average Fertility Index by Month and Season\n",
+    "# Heatmap: Average Fertility Index by Week and Season\n",
     "df['Satellite_Observation_Date_Converted'] = pd.to_datetime(df['Satellite_Observation_Date_Converted'])\n",
     "month = df['Satellite_Observation_Date_Converted'].dt.month\n",
     "seasonal_fertility = df.pivot_table(index='Season', columns=month, values='Fertility_Index', aggfunc='mean')\n",
