--- a/Bangledesh Agriculture Analysis/agricultureanalysis.ipynb
+++ b/Bangledesh Agriculture Analysis/agricultureanalysis.ipynb
@@ -171,11 +171,11 @@
     "# Heatmap: Average Fertility Index by Week and Season\n",
     "df['Satellite_Observation_Date_Converted'] = pd.to_datetime(df['Satellite_Observation_Date_Converted'])\n",
     "month = df['Satellite_Observation_Date_Converted'].dt.month\n",
-    "seasonal_fertility = df.pivot_table(index='Season', columns=month, values='Fertility_Index', aggfunc='mean')\n",
+    "seasonal_fertility = df.pivot_table(index='Season', columns=week, values='Fertility_Index', aggfunc='mean')\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.heatmap(seasonal_fertility, cmap='YlGnBu', annot=True, fmt='.1f', linewidths=0.5)\n",
-    "plt.title('Average Fertility Index by Month and Season')\n",
+    "plt.title('Average Fertility Index by Week and Season')\n",
     "plt.xlabel('7 Day Increments')\n",
     "plt.ylabel('Season')\n",
     "plt.show()"
