--- a/Bangledesh Agriculture Analysis/agricultureanalysis.ipynb
+++ b/Bangledesh Agriculture Analysis/agricultureanalysis.ipynb
@@ -170,7 +170,7 @@
    "source": [
     "# Heatmap: Average Fertility Index by Week and Season\n",
     "df['Satellite_Observation_Date_Converted'] = pd.to_datetime(df['Satellite_Observation_Date_Converted'])\n",
-    "month = df['Satellite_Observation_Date_Converted'].dt.month\n",
+    "week = df['Satellite_Observation_Date_Converted'].isocalendar().week\n",
     "seasonal_fertility = df.pivot_table(index='Season', columns=week, values='Fertility_Index', aggfunc='mean')\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
